# PerfFlowAspect

./: .gitignore  .gitlab-ci.yml  .mergify.yml  .readthedocs.yml  AUTHORS  Dockerfile  README.md  pyproject.toml.bak
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-deploy.yaml  github-actions.yml
docs/: AdiakIntegration.rst  Annotations.rst  BasicTutorial.rst  BuildingPerfFlowAspect.rst  CaliperIntegration.rst  Licenses.rst  Makefile  PerfFlowAspectDevel.rst  QuickStart.rst  Releases.rst  UpcomingFeatures.rst  Visualization.rst  conf.py  developer.rst  index.rst
docs/_static/: PerfFlowAspectTutorialSlides.pptx
perfflow/: aspect_base.py
perfflowaspect/: advice_dispatch.py
scripts/: .ci-check-c-code-format.sh  .ci-check-rst-format.sh  check-c-code-format.sh  check-rst-format.sh
src/c/: CMakeLists.txt  Makefile  README.md  lex.l  libperfflow_parser.map  parser.y  perfflow_parser.c  perfflow_parser.h
src/c/cmake/: CMakeBasics.cmake  Setup3rdParty.cmake
src/c/config/: CMakeLists.txt  perfflowaspect-config.cmake.in  perfflowaspect.pc.in  perfflowaspect_config.mk.in  perfflowaspect_setup_deps.cmake  perfflowaspect_setup_targets.cmake
src/c/examples/: CMakeLists.txt
src/c/examples/using-with-cmake/: CMakeLists.txt
src/c/host-configs/: corona-4.18.0-x86_64-clang@14.0.6.cmake  lassen-4.14.0-ppc64le-clang@10.0.1-gcc@8.3.1.cmake  lassen-4.14.0-ppc64le-clang@12.0.1-gcc@8.3.1.cmake  lassen-4.14.0-ppc64le-clang@14.0.5-gcc@8.3.1.cmake  lassen-4.14.0-ppc64le-clang@15.0.6.cmake  lassen-4.14.0-ppc64le-clang@16.0.6-cuda-11.8.0-gcc@11.2.1.cmake  lassen-4.14.0-ppc64le-clang@16.0.6-cuda@10.1.243-gcc@4.9.3.cmake  lassen-4.14.0-ppc64le-clang@16.0.6-cuda@10.1.243-gcc@8.3.1.cmake  lassen-4.14.0-ppc64le-clang@16.0.6-cuda@11.2.0-gcc@8.3.1.cmake  lassen-4.14.0-ppc64le-clang@16.0.6-cuda@11.8.0-gcc@11.2.1.cmake  lassen-4.14.0-ppc64le-clang@16.0.6-cuda@11.8.0-gcc@8.3.1.cmake  lassen-4.14.0-ppc64le-clang@16.0.6-gcc@11.2.1.cmake  lassen-4.14.0-ppc64le-clang@16.0.6-gcc@8.3.1.cmake  lassen-4.14.0-ppc64le-clang@17.0.6.cmake  lassen-4.14.0-ppc64le-ibm-clang@16.0.6-cuda@10.1.243-gcc@4.9.3.cmake  lassen-4.14.0-ppc64le-ibm-clang@16.0.6-cuda@10.1.243-gcc@8.3.1.cmake  lassen-4.14.0-ppc64le-ibm-clang@16.0.6-cuda@11.2.0-gcc@8.3.1.cmake  lassen-4.14.0-ppc64le-ibm-clang@16.0.6-cuda@11.8.0-gcc@11.2.1.cmake  lassen-4.14.0-ppc64le-ibm-clang@16.0.6-cuda@11.8.0-gcc@8.3.1.cmake  lassen-4.14.0-ppc64le-ibm-clang@16.0.6-gcc@11.2.1.cmake  lassen-4.14.0-ppc64le-ibm-clang@16.0.6-gcc@8.3.1.cmake  lassen-4.14.0-ppc64le-ibm-clang@16.0.6.cmake  matrix-4.18.0-x86_64-intel-classic-2021.6.0@clang@19.1.7.cmake  quartz-4.18.0-x86_64-clang@14.0.6.cmake  quartz.cmake  tioga-4.18.0-x86_64-rocm@6.1.2-amdclang@17.0.0.cmake  tioga-4.18.0-x86_64-rocm@6.3.1-amdclang@18.0.0.cmake  tuolumne-4.18.0-x86_64-rocm@5.2.3-amdclang@14.0.0.cmake  tuolumne-4.18.0-x86_64-rocm@6.2.1-amdclang@18.0.0.cmake  tuolumne-4.18.0-x86_64-rocm@6.3.1-amdclang@18.0.0.cmake  tuolumne-4.18.0-x86_64-rocm@7.0.0-amdclang@20.0.0.cmake  turing.cmake
src/c/parser/: CMakeLists.txt  Makefile  lex.l  libperfflow_parser.map  parser.y  perfflow_parser.cpp  perfflow_parser.hpp
src/c/parser/test/: Makefile  anno_parse_test.cpp  anno_validate_test.cpp
src/c/runtime/: CMakeLists.txt  Makefile  advice_base.hpp  advice_chrome_tracing.cpp  advice_chrome_tracing.hpp  advice_dispatcher.cpp  advice_dispatcher.hpp  perfflow_runtime.cpp
src/c/test/: CMakeLists.txt  Makefile  aliza.cu  anno_validator_test1.cpp  cuda_script.sh  main.cpp  smoketest.cpp  smoketest2.cpp  smoketest3.cpp  smoketest_MPI.cpp  smoketest_MT.cpp  smoketest_adiak.cpp  smoketest_class.cpp  smoketest_cuda_kernel.cu  smoketest_cuda_wrapper.cpp  smoketest_omp.cpp  t0001-cbinding-basic.t  t0001-cbinding-basic.t.in  test.cu  test.cuh
src/c/weaver/: CMakeLists.txt
src/c/weaver/weave/: CMakeLists.txt  perfflow_weave.cpp  perfflow_weave.hpp  perfflow_weave_common.cpp  perfflow_weave_common.hpp  perfflow_weave_legacy_pass.cpp  perfflow_weave_legacy_pass.hpp  perfflow_weave_new_pass.cpp  perfflow_weave_new_pass.hpp
src/common/libtap/: Makefile
src/common/sharness/: sharness.sh
src/python/: .flake8  pyproject.toml  pyproject.toml.bak  requirements.txt  setup.py
src/python/perfflow/: advice_chrome.py  aspect.py
src/python/perfflowaspect/: advice_chrome.py  advice_dispatch.py  aspect.py  aspect_base.py
src/python/test/: run_all_tests.sh  smoketest.py  smoketest2.py  smoketest_MT.py  smoketest_cuda.py  smoketest_direct.py  smoketest_future.py  smoketest_future2.py  smoketest_future_direct.py  smoketest_future_incorrect.py  smoketest_multiprocessing.py  smoketest_multithreading.py  t0001-pybinding-basic.t
src/python/tests/: smoketest_MT.py  smoketest_direct.py  smoketest_future_incorrect.py
src/test/c_integration_tests/: CMakeLists.txt  smoketest2.cpp  smoketest_MPI.cpp  smoketest_MT.cpp  smoketest_cuda_kernel.cu  smoketest_cuda_kernel.cuh  smoketest_cuda_wrapper.cpp  t0001-cbinding-basic.t.in
src/test/c_integration_tests/host-configs/: lassen-test-hostconfig.cmake
src/test/docker/bionic/: Dockerfile
tests/: smoketest.py  smoketest_future.py  smoketest_future2.py
