# TOML files will be phasing out setup.py as the de facto way to
# install packages. I've included it here as reference/reminder for
# future. It currently can be installed with the TOML file via poetry.
# The current drawback with pyproject.toml is that it does not allow
# for pip install in editable mode.
# To install via poetry, rename pyproject.toml.bak to remove .bak
# and move setup.py to setup.py.bak (so that pip won't find it).

[tool.poetry]
name = "perfflowaspect"
version = "0.1.0"
description = "A tool to analyze cross-cutting performance concerns of composite scientific workflows."
authors = [
    "Dong H. Ahn <ahn1@llnl.gov>",
    "Stephen Herbein <herbein@llnl.gov>",
    "James Corbett <corbett8@llnl.gov>",
    "Francesco Di Natale <dinatale3@llnl.gov>",
]
license = "LGPL-3.0-only"

packages = [
    { include = "perfflowaspect", from = "src/python" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
